PLGN-118 Fix CC title alignment & missing border

--- a/view/frontend/web/css/source/_module.less
+++ b/view/frontend/web/css/source/_module.less
@@ -131,10 +131,14 @@
 .checkout-payment-method .payment-method.ck-credit-card-payment .payment-method-title {
     display: flex;
     align-items: center;
-
+    border-top: 1px solid #cccccc;
     label {
         display: inline-flex;
         flex-wrap: wrap;
         justify-content: space-between;
+        span.cardknox-credit-card-title{
+            margin-left: 5px;
+            margin-top: 3px;
+        }
     }
 }
